// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Home > matches snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <nav
          class="bg-gray-800"
          data-headlessui-state=""
        >
          <div
            class="mx-auto max-w-8xl px-1 sm:px-6 lg:px-8"
          >
            <div
              class="relative flex h-16 items-center justify-between"
            >
              <div
                class="absolute inset-y-0 left-0 flex items-center sm:hidden"
              >
                <button
                  aria-expanded="false"
                  class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
                  data-headlessui-state=""
                  id="headlessui-disclosure-button-:r3:"
                  type="button"
                >
                  <span
                    class="absolute -inset-0.5"
                  />
                  <span
                    class="sr-only"
                  >
                    Open main menu
                  </span>
                  <svg
                    aria-hidden="true"
                    class="block h-6 w-6"
                    data-slot="icon"
                    fill="none"
                    stroke="currentColor"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start"
              >
                <div
                  class="flex flex-shrink-0 items-center"
                >
                  <img
                    alt="CapTap Logo"
                    class="h-8 w-auto"
                    src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
                  />
                </div>
                <div
                  class="hidden sm:ml-6 sm:flex"
                >
                  <div
                    class="flex items-center justify-center sm:items-stretch sm:justify-start"
                  >
                    <a
                      aria-current="page"
                      class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
                      href="/"
                    >
                      Home
                    </a>
                    <a
                      class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                      href="/parlayer"
                    >
                      Parlayer
                    </a>
                    <a
                      class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                      href="/journal/testuser"
                    >
                      Journal
                    </a>
                    <div>
                      <button
                        class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                      >
                        Search Teams
                      </button>
                    </div>
                    <div>
                      <button
                        class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                      >
                        Search Players
                      </button>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
              >
                <div
                  class="relative ml-3"
                  data-headlessui-state=""
                >
                  <div>
                    <button
                      aria-expanded="false"
                      aria-haspopup="menu"
                      class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
                      data-headlessui-state=""
                      id="headlessui-menu-button-:r4:"
                      type="button"
                    >
                      <span
                        class="absolute -inset-1.5"
                      />
                      <span
                        class="sr-only"
                      >
                        Open user menu
                      </span>
                      <img
                        alt="user profile photo"
                        class="h-8 w-8 rounded-full"
                        src=""
                      />
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
        <div
          id="detail"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <nav
        class="bg-gray-800"
        data-headlessui-state=""
      >
        <div
          class="mx-auto max-w-8xl px-1 sm:px-6 lg:px-8"
        >
          <div
            class="relative flex h-16 items-center justify-between"
          >
            <div
              class="absolute inset-y-0 left-0 flex items-center sm:hidden"
            >
              <button
                aria-expanded="false"
                class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
                data-headlessui-state=""
                id="headlessui-disclosure-button-:r3:"
                type="button"
              >
                <span
                  class="absolute -inset-0.5"
                />
                <span
                  class="sr-only"
                >
                  Open main menu
                </span>
                <svg
                  aria-hidden="true"
                  class="block h-6 w-6"
                  data-slot="icon"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start"
            >
              <div
                class="flex flex-shrink-0 items-center"
              >
                <img
                  alt="CapTap Logo"
                  class="h-8 w-auto"
                  src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
                />
              </div>
              <div
                class="hidden sm:ml-6 sm:flex"
              >
                <div
                  class="flex items-center justify-center sm:items-stretch sm:justify-start"
                >
                  <a
                    aria-current="page"
                    class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
                    href="/"
                  >
                    Home
                  </a>
                  <a
                    class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                    href="/parlayer"
                  >
                    Parlayer
                  </a>
                  <a
                    class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                    href="/journal/testuser"
                  >
                    Journal
                  </a>
                  <div>
                    <button
                      class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                    >
                      Search Teams
                    </button>
                  </div>
                  <div>
                    <button
                      class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                    >
                      Search Players
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="absolute inset-y-0 right-0 flex items-center pr-2 sm:static sm:inset-auto sm:ml-6 sm:pr-0"
            >
              <div
                class="relative ml-3"
                data-headlessui-state=""
              >
                <div>
                  <button
                    aria-expanded="false"
                    aria-haspopup="menu"
                    class="relative flex rounded-full bg-gray-800 text-sm focus:outline-none focus:ring-2 focus:ring-white focus:ring-offset-2 focus:ring-offset-gray-800"
                    data-headlessui-state=""
                    id="headlessui-menu-button-:r4:"
                    type="button"
                  >
                    <span
                      class="absolute -inset-1.5"
                    />
                    <span
                      class="sr-only"
                    >
                      Open user menu
                    </span>
                    <img
                      alt="user profile photo"
                      class="h-8 w-8 rounded-full"
                      src=""
                    />
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        id="detail"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Home > matches snapshot when logged out 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <nav
          class="bg-gray-800"
          data-headlessui-state=""
        >
          <div
            class="mx-auto max-w-8xl px-1 sm:px-6 lg:px-8"
          >
            <div
              class="relative flex h-16 items-center justify-between"
            >
              <div
                class="absolute inset-y-0 left-0 flex items-center sm:hidden"
              >
                <button
                  aria-expanded="false"
                  class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
                  data-headlessui-state=""
                  id="headlessui-disclosure-button-:r6:"
                  type="button"
                >
                  <span
                    class="absolute -inset-0.5"
                  />
                  <span
                    class="sr-only"
                  >
                    Open main menu
                  </span>
                  <svg
                    aria-hidden="true"
                    class="block h-6 w-6"
                    data-slot="icon"
                    fill="none"
                    stroke="currentColor"
                    stroke-width="1.5"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
              <div
                class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start"
              >
                <div
                  class="flex flex-shrink-0 items-center"
                >
                  <img
                    alt="CapTap Logo"
                    class="h-8 w-auto"
                    src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
                  />
                </div>
                <div
                  class="hidden sm:ml-6 sm:block"
                >
                  <div
                    class="flex space-x-4"
                  >
                    <a
                      aria-current="page"
                      class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
                      href="/"
                    >
                      Home
                    </a>
                    <a
                      class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                      href="/login"
                    >
                      Login
                    </a>
                    <a
                      class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                      href="/signup"
                    >
                      Signup
                    </a>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
        <div
          id="detail"
        />
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <nav
        class="bg-gray-800"
        data-headlessui-state=""
      >
        <div
          class="mx-auto max-w-8xl px-1 sm:px-6 lg:px-8"
        >
          <div
            class="relative flex h-16 items-center justify-between"
          >
            <div
              class="absolute inset-y-0 left-0 flex items-center sm:hidden"
            >
              <button
                aria-expanded="false"
                class="relative inline-flex items-center justify-center rounded-md p-2 text-gray-400 hover:bg-gray-700 hover:text-white focus:outline-none focus:ring-2 focus:ring-inset focus:ring-white"
                data-headlessui-state=""
                id="headlessui-disclosure-button-:r6:"
                type="button"
              >
                <span
                  class="absolute -inset-0.5"
                />
                <span
                  class="sr-only"
                >
                  Open main menu
                </span>
                <svg
                  aria-hidden="true"
                  class="block h-6 w-6"
                  data-slot="icon"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="1.5"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="flex flex-1 items-center justify-center sm:items-stretch sm:justify-start"
            >
              <div
                class="flex flex-shrink-0 items-center"
              >
                <img
                  alt="CapTap Logo"
                  class="h-8 w-auto"
                  src="https://tailwindui.com/img/logos/mark.svg?color=indigo&shade=500"
                />
              </div>
              <div
                class="hidden sm:ml-6 sm:block"
              >
                <div
                  class="flex space-x-4"
                >
                  <a
                    aria-current="page"
                    class="bg-gray-900 text-white rounded-md px-3 py-2 text-sm font-medium"
                    href="/"
                  >
                    Home
                  </a>
                  <a
                    class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                    href="/login"
                  >
                    Login
                  </a>
                  <a
                    class="text-gray-300 hover:bg-gray-700 hover:text-white rounded-md px-3 py-2 text-sm font-medium"
                    href="/signup"
                  >
                    Signup
                  </a>
                </div>
              </div>
            </div>
          </div>
        </div>
      </nav>
      <div
        id="detail"
      />
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
